force-app/main/default/Lwc with site/objects/Resume__c/fields/Date_of_birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_birth__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>