force-app/main/default/Lwc with site/objects/Resume__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <length>40</length>
    <type>Text</type>
</CustomField>