force-app/main/default/Lwc with site/objects/Resume__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <label>Full Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>