force-app/main/default/Lwc with site/objects/Resume__c/fields/Languages__c.field-meta.xml
<CustomField>
    <fullName>Languages__c</fullName>
    <label>Languages</label>
    <type>TextArea</type>
</CustomField>