force-app/main/default/Lwc with site/objects/Resume__c/fields/Other_Certifications__c.field-meta.xml
<CustomField>
    <fullName>Other_Certifications__c</fullName>
    <label>Other Certifications</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>