force-app/main/default/Lwc with site/objects/Resume__c/fields/Pincode__c.field-meta.xml
<CustomField>
    <fullName>Pincode__c</fullName>
    <label>Pincode</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>