force-app/main/default/Lwc with site/objects/Resume__c/fields/Salesforce_Certifications__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Certifications__c</fullName>
    <label>Salesforce Certifications</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>