force-app/main/default/Lwc with site/objects/Resume__c/fields/Software_and_Tools__c.field-meta.xml
<CustomField>
    <fullName>Software_and_Tools__c</fullName>
    <label>Software and Tools</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>